--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-lorem-ipsum": "^1.4.10",
+    "react-router": "6",
+    "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
