--- a/package.json
+++ b/package.json
@@ -8,14 +8,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
-    "date-fns": "^2.29.3",
+    "buffer": "^6.0.3",
     "react": "^18.2.0",
-    "react-big-calendar": "^1.5.0",
-    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.38.0",
     "react-icons": "^4.6.0",
-    "react-lorem-ipsum": "^1.4.10",
     "react-router": "6",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
