Update and rename main.yml to static.yml

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ static ]
   pull_request:
-    branches: [ main ]
+    branches: [ static ]
     
 jobs:
   build:
