Update and rename static.yml to main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ static ]
+    branches: [ main ]
   pull_request:
-    branches: [ static ]
+    branches: [ main ]
     
 jobs:
   build:
